[package]
name = "jup-swap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jupiter-swap-api-client = "0.1.0"
solana-sdk = "~1.17"
solana-client = "~1.17"
bincode = "1.3.3"
tokio = "1.35.1"
anyhow = "1.0.79"
dotenv = "0.15.0"
