[package]
name = "counter-interact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor_counter_interface = { path = "../anchor_counter_interface" }
anyhow = "1.0.79"
solana-client = "~1.17"
solana-program = "~1.17"
solana-sdk = "~1.17"
